[md] Fixes tooltips regression on Linux that should not have changed

I have tried making rounded corners work on Linux but so far haven't
succeeded. I can make the non-opaque background work using
Widget::SetOpacity and ui::Layer::SetFillsBoundsOpaquely but the native
widget on Linux still paints around the rounded corners.
Widget::SetShape doesn't use antialiasing so using that to achieve
rounded corners appears crude.
There is some work to make transparency work better on Linux
https://codereview.chromium.org/2124633002 so I haven't pursued this
further.

BUG=630556

Review-Url: https://codereview.chromium.org/2174033002
Cr-Commit-Position: refs/heads/master@{#407350}

Former-commit-id: 6ea8ec306bee7352409e5c0d76547fc9f802d640